# linux-code

./: .bashrc  .gitignore  .tmux.conf  HANDOFF.md  LICENSE  PLAN.md  pyproject.toml
mtgmodern/: __init__.py
tests/fixtures/: challenge_event.json  challenge_event_small.json
