[project]
name = "mtgmodern"
version = "0.1.0"
description = "Scrape and analyze MTGO Modern results: metagame share, win/loss records, and top-8 head-to-head matchups."
readme = "README.md"
requires-python = ">=3.14"
# Runtime is stdlib-only. No third-party runtime dependencies.
dependencies = []

[project.scripts]
mtgmodern = "mtgmodern.cli:main"

[dependency-groups]
dev = ["mypy>=1.11", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtgmodern"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_unimported = true
files = ["mtgmodern", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
